# neurips-paper-latent

./: .dockerignore  .gitignore  Dockerfile  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
configs/: events.yaml  hidden_goals.yaml  reward.yaml  tasks.yaml  transitions.yaml
paper/: ENTITY_WORLD_SPEC.md  LOGGING_SPEC.md  RELATED_WORK_AND_POSITIONING.md  SYNTHETIC_OPERATOR_BASELINE.md  TOKEN_EXHAUSTION_AND_RECOVERY.md
scripts/: run_ollama_family.sh
server/: __init__.py  app.py
src/latentgoalops/: __init__.py  client.py  experiment.py  models.py
src/latentgoalops/analysis/: __init__.py  aggregate.py  audit.py  belief.py  counterfactuals.py  leakage_audit.py  plots.py  report.py  stats.py  tables.py
src/latentgoalops/baseline/: __init__.py  heuristics.py  parsers.py  prompts.py  providers.py  run_ablations.py  run_baseline.py  run_model_ladder.py  run_reliability.py  synthetic_operator.py
src/latentgoalops/human/: __init__.py  collect_trace.py  score_traces.py
src/latentgoalops/logging_/: __init__.py  jsonl_logger.py  schemas.py  wandb_logger.py
src/latentgoalops/server/: __init__.py  app.py  config.py  environment.py  grader.py  hidden_goals.py  memory.py  objective_utils.py  public_reasoning.py  rewards.py  world.py
src/latentgoalops/server/tasks/: __init__.py  task1_feedback.py  task2_prioritization.py  (+6 more)
tests/: test_aggregate.py  test_api.py  test_belief.py  test_determinism.py  test_grader.py  test_parsers.py  test_providers.py  test_report.py  test_run_baseline.py  test_synthetic_operator.py  test_tasks.py
